cmake_minimum_required(VERSION 3.15.0)

# set(CMAKE_SYSTEM_VERSION 10.0 CACHE STRING "" FORCE)

# specify the C++ standard

SET(PROJECT_NAME inkscape)

project(dsacpp)

set(CMAKE_CXX_STANDARD 11)

include_directories(${CMAKE_SOURCE_DIR})

add_subdirectory(AVL)
add_subdirectory(binTree)
add_subdirectory(BitMap)
add_subdirectory(Bitmap_set_only)
add_subdirectory(BST)
add_subdirectory(BTree)
add_subdirectory(bubblesort)
add_subdirectory(conversion)
# add_subdirectory(Huffman_PQ_ComplHeap)
# add_subdirectory(Huffman_PQ_LeftHeap)
# add_subdirectory(Huffman_PQ_List)
# add_subdirectory(PQ)
# add_subdirectory(PQ_ComplHeap)
# add_subdirectory(PQ_List)
# add_subdirectory(PQ_leftheap)
# add_subdirectory(Prefix_free_Codes)
add_subdirectory(UniPrint)
# add_subdirectory(conversion_recursive)
# add_subdirectory(countOnes)
# add_subdirectory(cursor_list)
# add_subdirectory(daxue)
add_subdirectory(factorial)
# add_subdirectory(fibonacci)
# add_subdirectory(gcd)
# add_subdirectory(graph)
# add_subdirectory(graphmatrix)
# add_subdirectory(greatest_slice)
# add_subdirectory(hanoi)
add_subdirectory(hashtable)
# add_subdirectory(huffman)
# add_subdirectory(laby)
# add_subdirectory(list)
# add_subdirectory(majority)
# add_subdirectory(max)
# add_subdirectory(maxRect)
# add_subdirectory(median1)
# add_subdirectory(median2)
# add_subdirectory(nest_recursive)
# add_subdirectory(nest_stack)
# add_subdirectory(power)
add_subdirectory(prime)
# add_subdirectory(queen_brute_force_1)
# add_subdirectory(queen_brute_force_2)
# add_subdirectory(queen_recursive)
# add_subdirectory(queen_stack)
add_subdirectory(queue)
add_subdirectory(random)
# add_subdirectory(redBlack)
# add_subdirectory(reverse)
# add_subdirectory(rpn)
# add_subdirectory(selection)
# add_subdirectory(shiftK)
# add_subdirectory(simu)
# add_subdirectory(skiplist)
# add_subdirectory(splay)
# add_subdirectory(stack)
# add_subdirectory(stack_list)
# add_subdirectory(stack_vector)
# add_subdirectory(string_pm)
# add_subdirectory(string_pm_bf1)
# add_subdirectory(string_pm_bf2)
# add_subdirectory(string_pm_bm_bc)
# add_subdirectory(string_pm_bm_bc+gs)
# add_subdirectory(string_pm_kmp)
# add_subdirectory(string_pm_kmp_improved)
# add_subdirectory(string_pm_kr)
# add_subdirectory(sum)
add_subdirectory(vector)

# add_subdirectory(_share)
# add_subdirectory(Dictionary)
# add_subdirectory(Entry)