set(PROJECT_NAME string_pm_bf1)

################################################################################
# Source groups
################################################################################

################################################################################
# Target
################################################################################
add_executable(${PROJECT_NAME} "pm_brute1.cpp")

