set(PROJECT_NAME string_pm_bf2)

################################################################################
# Source groups
################################################################################

################################################################################
# Target
################################################################################
add_executable(${PROJECT_NAME} "pm_brute2.cpp")
