set(PROJECT_NAME Bitmap)
project(${PROJECT_NAME})
################################################################################
# Source groups
################################################################################
# set(SOURCE_LIST
#     "Bitmap_O1_init.h"
# )
add_executable(${PROJECT_NAME}, "main_O1_init.cpp.cpp")