set(PROJECT_NAME string_pm_bm_bc+gs)

################################################################################
# Source groups
################################################################################

################################################################################
# Target
################################################################################
add_executable(${PROJECT_NAME} "pm_bm_bc+gs.cpp")
